[한병권] 이메일 보내기 추가 시작

--- a/lms/src/main/resources/application.properties
+++ b/lms/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.password=yhr1123!!
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=team3.lmsp@gmail.com
+spring.mail.password=yhr1123!!
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
